--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -27,38 +27,46 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 35%;
     height: 100%;
     color: white;
-    text-align: left;
     padding-left: 15px;
     padding-right: 25px;
+    text-align: center;
 }
 .Header .Header-Content h1{
-    color: var(--Chocolate);
+    /* color: var(--Chocolate); */
+    color: var(--dark-Gray);
 }
 
 .Header .Header-Content p{
-    line-height: 30px;
-    
+    line-height: 30px
 }
 
-.Header .btn-view-more{
+.Header .View-More-Items .btn-view-more{
     border: 0;
     padding: 8px 20px;
-    background-color: var(--Chocolate);
+    background-color: var(--dark-Gray);
     color: white;
     box-shadow: 4px 5px 10px var(--CadetBlue);
     border-radius: 5px;
+    cursor: pointer!important;
+    z-index: 1000;
+}
+
+.Header .View-More-Items .btn-view-more:hover{
+    background-color: brown;
 }
 
 
 .Header .Right-Side-Header{
     height: 100%;
-    width: 150px;
-    border-left: 1px solid var(--border-color);
+    width: 120px;
     position: absolute;
-    right: 0
+    right: 0;
+    box-shadow: 2px 5px 10px #131212;
+    padding-left: 10px;
 
 }
 .Header .Right-Side-Header-Container{
@@ -73,6 +81,4 @@
 .Header .Right-Side-Header-Container img{
     width: 100%;
     height: 120px;
-    border-bottom: 1px solid var(--border-color);
-    /* padding: 10px; */
 }
