--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -1,29 +1,29 @@
-/* * Header Background Style */
-.Header{
+/* * header Background Style */
+.header{
     width: 100%;
     height: 100vh;
     position: relative;
 }
-.Header .Container , .Header .Container .Overlay{
+.header .container , .header .container .overlay{
     width: 100%;
     height: 100%;
 }
-.Header .Container .Overlay{
+.header .container .overlay{
     position: absolute;
     top: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.2);
 }
-.Header .Container .Header-Background{
-    background-image: url("../Images/Header/HeaderBackground.jpg");
+.header .container .header-background{
+    background-image: url("../Images/header/HeaderBackground.jpg");
     width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
 }
 
-/* * Header Details Style */
-.Header .Header-Content{
+/* * header Details Style */
+.header .header-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,16 +35,16 @@
     padding-right: 25px;
     text-align: center;
 }
-.Header .Header-Content h1{
+.header .header-content h1{
     /* color: var(--Chocolate); */
     color: var(--dark-Gray);
 }
 
-.Header .Header-Content p{
+.header .header-content p{
     line-height: 30px
 }
 
-.Header .View-More-Items .btn-view-more{
+.header .view-more-items .btn-view-more{
     border: 0;
     padding: 8px 20px;
     background-color: var(--dark-Gray);
@@ -55,12 +55,12 @@
     z-index: 1000;
 }
 
-.Header .View-More-Items .btn-view-more:hover{
+.header .view-more-items .btn-view-more:hover{
     background-color: brown;
 }
 
 
-.Header .Right-Side-Header{
+.header .right-side-header{
     height: 100%;
     width: 120px;
     position: absolute;
@@ -69,7 +69,7 @@
     padding-left: 10px;
 
 }
-.Header .Right-Side-Header-Container{
+.header .right-side-header-container{
     height: 70%;
     padding-top: 50%;
     display: flex;
@@ -78,7 +78,7 @@
     align-items: center;
 }
 
-.Header .Right-Side-Header-Container img{
+.header .right-side-header-container img{
     width: 100%;
     height: 120px;
 }
