--- a/CSS/Categories.css
+++ b/CSS/Categories.css
@@ -1,15 +1,17 @@
+
 body {
     font-family: Roboto, sans-serif;
-    margin: 10px;
-    /*background-color: #efeeee;*/
+    margin: 0;
 }
 .main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     justify-content: space-between;
     align-items: center;
-    column-gap: 3%;
-    row-gap: 6%;
+    /*column-gap: 3%;*/
+    /*row-gap: 3%;*/
+    margin: 20px 0;
+    /*overflow: hidden;*/
 }
 
 @media (max-width: 1600px) {
@@ -81,6 +83,7 @@ body {
     box-shadow: 0 0 10px #4F5D75;
     border-radius: 20px;
     transition: 0.2s ease;
+    margin: 20px;
 }
 
 .card:hover{
