--- a/CSS/ViewProducts.css
+++ b/CSS/ViewProducts.css
@@ -105,7 +105,7 @@
 
 .view-products .carousel-inner{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .view-products .carousel-inner-item{position: relative;}
@@ -123,3 +123,13 @@
 .view-products .carousel-control-next{right: -30px;}
 
 /* * end styling of  carousel */
+
+
+
+
+@media screen and (min-width:1200px)   {
+    
+    .view-products .carousel{
+        width: 70%!important;
+    }
+}
