--- a/CSS/Cart.css
+++ b/CSS/Cart.css
@@ -81,7 +81,11 @@ body {
     font-weight: bolder;
   }
 
-  .proceed-btn {
+
+
+  /* go to checkout button styling  */
+
+  .proceeder {
     display: block;
     margin: auto;
     margin-top: 40px;
@@ -92,20 +96,45 @@ body {
     border-radius: 20%;
   }
 
-  .proceed-btn:hover {
+  .proceeder:hover {
+    background-color: #BFC0C0;
+    box-shadow: 0 7px #666;
+    top: 2px;
+  }
+
+  .proceeder {
+    background-color: #EF8354;
+    box-shadow: 0 2px #666;
+    top: 5px;
+  }
+
+/*          */
+
+  .pay {
+    display: block;
+    margin: auto;
+    margin-top: 40px;
+    color: white;
+    background-color: #4F5D75;
+    box-shadow: 0 5px #999;
+    cursor: pointer;
+    border-radius: 20%;
+  }
+
+  .proceed-btn, .pay:hover {
     background-color: #BFC0C0;
     box-shadow: 0 7px #666;
     top: 2px;
   }
   
-  .proceed-btn:active {
+  .proceed-btn, .pay:active {
     background-color: #EF8354;
     box-shadow: 0 2px #666;
     top: 5px;
   }
 
 
-  .cart-title{
+  .cart-title, .payment-title, .billing-address-title{
     font-weight: bolder;
     font-size: larger;
 
@@ -116,7 +145,7 @@ body {
     font-size: larger;
   }
 
-  .continue-shopping {
+  .continue-shopping, .pay-shopping-btn {
     display: block;
     font-weight: bolder;
     color: #EF8354;
@@ -152,6 +181,95 @@ body {
     font-weight: bolder;
     font-size: larger;
   }
+
+  /* check out styling */
+
+  .checkout {
+    position: absolute;
+    border: 1px solid;
+    background-color: #3c4052;
+    margin: auto;
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    text-align: center;
+    width: 800px;
+    height: 600px;
+    font-weight: bold;
+    color: white;
+
+  }
+
+  .billing-address-title, .payment-title {
+    color: #EF8354;
+  }
+
+  .gridder {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px;
+  }
+
+  .checkout div {
+    white-space: pre-line;
+  }
+
+  .cards-images-holder {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .checkout div {
+  text-align: left;
+  margin: auto;
+  }
+
+
+  .checkout img {
+    height: 20px;
+    width: 20px;
+    }
+  
+    .city-zip-exp-cvv-holder {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      justify-content: center;
+      column-gap: 10px;
+      margin-top: 50px;
+    }
+
+  .city-zip-exp-cvv-holder div {
+    
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-left: 10px;
+    
+  }
+
+  .empty-pay-text {
+    left: 120px;
+    top: 100px;
+    position: absolute;
+    color: #FFFFFF;
+  }
+
+  .pay-shopping-btn {
+    left: 120px;
+    top: 140px;
+    position: absolute;
+  }
+ 
+
+  .city-zip-exp-cvv-holder input {
+    width: 100px;
+  }
+
+
+/* responsive styling */
 
 @media (max-width: 950px){
     .main {
