--- a/HTML/Components/ViewProducts.html
+++ b/HTML/Components/ViewProducts.html
@@ -5,13 +5,13 @@
         <!-- * start Filteration Of products -->
         <div class="products-header-wrapper">
             <div class="categories-of-products">
-                <button class="active">Women</button>
+                <button class="active"  id="CategoryOfWomen">Women</button>
             </div>
             <div class="categories-of-products">
-                <button>Men</button>
+                <button id="CategoryOfMen">Men</button>
             </div>
             <div class="categories-of-products">
-                <button>Sale</button>
+                <button id="CategoryOfSale">Sale</button>
             </div>
         </div>
         <!-- * end Filteration Of products -->
@@ -55,6 +55,33 @@
                     <button class="btn-carousel-view-details"> View Details</button>
                     
                 </div>
+
+                <div class="carousel-inner-item">
+                    <div class="product_details">
+                        <div class="Overlay"></div>
+                        <img src="../Images/Products/Women/5.jpg"/>
+                    </div>
+                    <button class="btn-carousel-view-details"> View Details</button>
+                    
+                </div>
+
+                <div class="carousel-inner-item">
+                    <div class="product_details">
+                        <div class="Overlay"></div>
+                        <img src="../Images/Products/Women/5.jpg"/>
+                    </div>
+                    <button class="btn-carousel-view-details"> View Details</button>
+                    
+                </div>
+
+                <div class="carousel-inner-item">
+                    <div class="product_details">
+                        <div class="Overlay"></div>
+                        <img src="../Images/Products/Women/5.jpg"/>
+                    </div>
+                    <button class="btn-carousel-view-details"> View Details</button>
+                    
+                </div>
             </div>
 
             <!-- * start Arrows of carousel -->
@@ -76,3 +103,5 @@
 
 </div>
 <script src="../Libaray/FadeInProductDetails.js"></script>
+<script src="../../Scripts/ViewProducts.js"></script>
+
