--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,5 +1,5 @@
 body {
-  height: auto;
+  height: 200vh;
 }
 .container-1 {
   display: flex;
@@ -9,18 +9,23 @@ body {
 }
 .product-data {
   display: flex;
-  background-color: var(--Chocolate);
+  /*   background-color: var(--Chocolate);
+ */
   border: 1px solid black;
   margin: 100px 50px;
-  height: 80vh;
+  height: 120vh;
   width: 80%;
 }
 .product-img {
-  width: 60%;
+  width: 50%;
+  border: 1px solid black;
 }
 .product-img img {
-  width: 100%;
-  height: 100%;
+  max-width: 500px;
+  height: auto;
+  margin: 0 auto;
+  /*   float: right;
+ */
 }
 .product-desc {
   width: 40%;
