Adding free shipping section to product page

--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,18 +1,38 @@
 body {
   height: 200vh;
 }
+.free-shipping {
+  height: 50px;
+  width: 100%;
+  border: 1px solid var(--light);
+  background-color: #f6f5f1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .container-1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid black;
+}
+.path-product {
+  height: 70px;
+  width: 90%;
+  margin: 10px;
+  padding-left: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: 1px solid black;
+}
+.path-product h3 {
+  color: var(--border-color);
 }
 .product-data {
   display: flex;
-  /*   background-color: var(--Chocolate);
- */
+
   border: 1px solid black;
-  margin: 100px 50px;
   height: 120vh;
   width: 80%;
 }
@@ -21,11 +41,12 @@ body {
   border: 1px solid black;
 }
 .product-img img {
-  max-width: 500px;
+  width: 600px;
   height: auto;
   margin: 0 auto;
-  /*   float: right;
- */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .product-desc {
   width: 40%;
