--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -8,12 +8,14 @@ body {
 
 }
 
+
 .login-container {
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
     height: 100vh;
+    background-color: #2D3142;
 }
 
 .login-form-container {
@@ -24,7 +26,7 @@ body {
 
 .login-form {
     text-align: center;
-    margin: 20px;
+    margin: 0 20px;
     border: 1px solid #d1d1d1;
     padding: 40px;
     border-radius: 10px;
@@ -76,7 +78,7 @@ body {
 
 .site-quote {
     font-size: 25px;
-    margin: 10px;
+    margin-top: 10px;
 
 }
 
