add women images and json file

--- a/HTML/Components/Header.html
+++ b/HTML/Components/Header.html
@@ -22,6 +22,7 @@
                             <img src="../Images/Header/Wool1.png">
                             <img src="../Images/Header/Wool2.png">
                             <img src="../Images/Header/Wool3.png">
+                            <img src="../Images/Header/Wool4.png">
                         
                         </div>
                     </div>
