--- a/CSS/ViewProducts.css
+++ b/CSS/ViewProducts.css
@@ -134,6 +134,6 @@
 @media screen and (min-width:1200px)   {
     
     .view-products .carousel{
-        width: 70%!important;
+        /* width: 70%!important; */
     }
 }
