--- a/HTML/Components/ViewProducts.html
+++ b/HTML/Components/ViewProducts.html
@@ -18,70 +18,7 @@
 
         <!-- * start carousel -->
         <div class="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/2.jpg"/>            
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                </div>
-
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/3.jpg"/>
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                    
-                </div>
-
-
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/4.jpg"/>
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                    
-                </div>
-
-
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/5.jpg"/>
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                    
-                </div>
-
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/5.jpg"/>
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                    
-                </div>
-
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/5.jpg"/>
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                    
-                </div>
-
-                <div class="carousel-inner-item">
-                    <div class="product_details">
-                        <div class="Overlay"></div>
-                        <img src="../Images/Products/Women/5.jpg"/>
-                    </div>
-                    <button class="btn-carousel-view-details"> View Details</button>
-                    
-                </div>
+            <div class="carousel-inner women">          
             </div>
 
             <!-- * start Arrows of carousel -->
@@ -102,6 +39,7 @@
     </div>
 
 </div>
+<script src="../../Scripts/LoadProducts.js"></script>
 <script src="../Libaray/FadeInProductDetails.js"></script>
 <script src="../../Scripts/ViewProducts.js"></script>
 
