--- a/HTML/Components/ViewProducts.html
+++ b/HTML/Components/ViewProducts.html
@@ -18,7 +18,15 @@
 
         <!-- * start carousel -->
         <div class="carousel">
-            <div class="carousel-inner women">          
+            <div class="carousel-inner women">    
+                <div class="carousel-inner-item"></div> 
+                <div class="carousel-inner-item"></div>      
+                <div class="carousel-inner-item"></div>      
+                <div class="carousel-inner-item"></div>      
+                <div class="carousel-inner-item"></div>      
+                <div class="carousel-inner-item"></div>      
+                <div class="carousel-inner-item"></div>      
+                <div class="carousel-inner-item"></div>      
             </div>
 
             <!-- * start Arrows of carousel -->
