--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -8,14 +8,13 @@ body {
 
 }
 
-
 .login-container {
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
     height: 100vh;
-    background-color: #2D3142;
+    background-color: #FFFFFF;
 }
 
 .login-form-container {
@@ -27,10 +26,10 @@ body {
 .login-form {
     text-align: center;
     margin: 0 20px;
-    border: 1px solid #d1d1d1;
+    border: 1px solid #4F5D75;
     padding: 40px;
     border-radius: 10px;
-    box-shadow: 0 3px 5px gray;
+    box-shadow: 3px 3px 15px gray;
     min-width: 550px;
     max-width: 600px;
 }
@@ -76,10 +75,10 @@ body {
     width: 90%;
 }
 
-.site-quote {
+.l-site-quote {
     font-size: 25px;
     margin-top: 10px;
-
+    color: #2D3142;
 }
 
 .logo-h1 {
