add taps handler in view all products

--- a/HTML/Components/ViewProducts.html
+++ b/HTML/Components/ViewProducts.html
@@ -5,20 +5,20 @@
         <!-- * start Filteration Of products -->
         <div class="products-header-wrapper">
             <div class="categories-of-products">
-                <button class="active"  id="CategoryOfWomen">Women</button>
+                <button class="active"  id="women">Women</button>
             </div>
             <div class="categories-of-products">
-                <button id="CategoryOfMen">Men</button>
+                <button id="men">Men</button>
             </div>
             <div class="categories-of-products">
-                <button id="CategoryOfSale">Sale</button>
+                <button id="sale">Sale</button>
             </div>
         </div>
         <!-- * end Filteration Of products -->
 
         <!-- * start carousel -->
         <div class="carousel">
-            <div class="carousel-inner women">    
+            <div class="carousel-inner">    
                 <div class="carousel-inner-item"></div> 
                 <div class="carousel-inner-item"></div>      
                 <div class="carousel-inner-item"></div>      
