add handler function into arrow to scroll product slider

--- a/CSS/ViewProducts.css
+++ b/CSS/ViewProducts.css
@@ -116,6 +116,7 @@
 
 
 .view-products .carousel-inner-item {
+    width: 100%;
     position: relative;
     margin-left: 10px;
     transition: all 2s ease-in;
