add account link into home page and link pages with each other in navbar component

--- a/HTML/Components/Navbar.html
+++ b/HTML/Components/Navbar.html
@@ -1,14 +1,28 @@
 <div class="nav-bar">
     <div class="container">
         <div class="brand-name">
-            <h2>BOHO...</h2>
+            <h2 id="logo">BOHO...</h2>
         </div>
         <ul class="links">
-            <li class="active">HOME</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
-            <li>STORE</li>
-            <li>SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span></li>
+            <li class="active"> <a href="./"> HOME </a></li>
+            <li> <a href="./about.html"> ABOUT </a></li>
+            <li> <a href="#"> CONTACT </a></li>
+            <li> <a href="#"> STORE </a></li>
+            <li> <a href="#"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
+            <li id="login">
+                <span> Account </span>
+                <img src="../../Images/Header/down.png" class="down-arrow-icon"/>
+            </li>
         </ul>
     </div>
 </div>
+<div class="account-settings">  
+    <a href="./Login.html"> sign-in </a>
+    <a href="./Login.html#sign-up"> sign-up </a>
+
+</div>
+
+
+<!-- * Check if User login or not -->
+<script src="../../Scripts/Navbar.js"></script>
+
