--- a/CSS/HeaderAndFooter.css
+++ b/CSS/HeaderAndFooter.css
@@ -25,7 +25,7 @@ a {
 .container {
     /* I made the content in the middle
     while the back ground on whole screen */
-    width: 85%;
+    width: 90%;
     margin: auto; /* to make content in middle*/
 }
 
@@ -42,21 +42,21 @@ ul {
     background-color: #2D3142;
     color: #BFC0C0;
     overflow: hidden;
-
 }
 
 .nav-bar .brand-name {
     color: #EF8354;
     float: left;
-    width: 50%;
+    width: 40%;
     text-transform: uppercase;
     margin-top: 10px;   
+    cursor: pointer;
 }
 
 .nav-bar .links {
     /* float: left; */
     float: right;
-    width: 50%;
+    width: 60%;
     text-align: right;
 }
 
@@ -68,12 +68,17 @@ ul {
     border-bottom: 2px solid transparent;
     cursor: pointer;
 }
+.nav-bar .links li a{color: #BFC0C0;}
 
 .nav-bar .links li.active, .nav-bar .links li:hover {
     color: #EF8354;
     border-bottom: 2px solid #EF8354;
 }
+.nav-bar .links li.active a , .nav-bar .links li:hover a{color: #EF8354;}
 
+.nav-bar .links li a.active, .nav-bar .links li:last-of-type:hover{
+    border: 0;
+}
 /* end nav bar */
 
 
@@ -166,13 +171,48 @@ ul {
 
 /* end of footer */
 
+/* * add style to account settings */
+.down-arrow-icon{
+    width: 20px;
+    border-radius: 50px;
+    margin-left: 5px;
+}
+.activeLink{color: '#EF8354'!important;}
+.account-settings{
+    display: none;
+    position: absolute;
+    background-color: #2D3142;
+    color: white;
+    right: 65px;
+    top: 75px;
+    z-index: 1000;
+    width: 100px;
+    height: 100px;
+    border-bottom-left-radius: 10px ;
+    border-bottom-right-radius: 10px ;
+    /* border-top: 2px solid var(--light); */
+    cursor: pointer;
+}
+.account-settings a{
+    height: 49px!important;
+    padding-top: 10px;
+    display: block;
+    border-bottom: 1px solid var(--light);
+    text-align: center;
+    color: var(--light);
+}
+.account-settings a:hover{
+    background-color: #EF8354;
+    color: #2D3142; ;
 
-/* start carousel */
-/*.carousel img {*/
-/*    width: 600px;*/
-/*}*/
-
-/* end carousel */
+}
+.account-settings a:last-of-type{
+    border: 0;
+}
+.account-settings a:last-of-type:hover{
+    border-bottom-left-radius: 10px ;
+    border-bottom-right-radius: 10px ;
+}
 
 
 @media screen and (min-width:991px) and (max-width:1200px)  {
@@ -197,4 +237,9 @@ ul {
     } 
     .footer .footer-content .shop {width: 20%;}
     
+
+    .account-settings{
+        right: 30px;
+        top: 75px;
+    }
 }
