change some login in logout implementation

--- a/CSS/ViewProducts.css
+++ b/CSS/ViewProducts.css
@@ -109,6 +109,8 @@
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
+    width: 60vh;
+    width: 100%;
 }
 .view-products .carousel-inner::-webkit-scrollbar {
   display: none;
