fixed sign out and sign up
fixed signup doesn't show and removed deleting cookies on signout

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -11,6 +11,6 @@ body{
     font-size: 30px;
     color: black;
 }
-.text h3{
-    background-color: #BFC0C0;
-}
+/*.text h3{*/
+/*    background-color: #BFC0C0;*/
+/*}*/
