--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,5 +1,5 @@
 body {
-  height: auto!important;
+  height: auto !important;
 }
 .free-shipping {
   height: 50px;
@@ -43,7 +43,6 @@ body {
  */
 }
 .product-img {
-  
   width: 50%;
   /*   border: 1px solid black;
  */
@@ -98,7 +97,7 @@ select:focus {
   outline: none;
 }
 .quantity-styling {
-  width: 35%!important;
+  width: 35% !important;
 
   padding: 0.5em 0.5em;
   border: 1px solid var(--border-color);
@@ -145,4 +144,59 @@ select:focus {
 .add-to-cart:hover {
   background-color: var(--light);
   color: var(--dark-Gray);
+}
+.container-pop-up {
+  background: rgba(45, 45, 45, 0.95);
+  bottom: 0;
+  display: none;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1004;
+  left: 0;
+  color: var(--border-color);
+}
+.pop-up-div {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 25%;
+  left: 25%;
+  text-align: center;
+  background: rgb(255, 255, 255, 1);
+  border: 1px solid;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.selected-product-data {
+  width: 70%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.product-info {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.selected-product-buttons {
+  display: flex;
+  flex-direction: column;
+  margin: 60px;
+}
+.continue-shopping,
+.view-cart {
+  width: 100%;
+  height: 70px;
+  background-color: var(--dark-Gray);
+  font-size: 20px;
+  color: white;
+  padding: 10px 10px;
+  margin: 10px 0px;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
 }
