--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -1,12 +1,11 @@
 /* * header Background Style */
 .header{
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     position: relative;
 }
 .header .container , .header .container .overlay{
     width: 100%;
-    
     height: 100%;
 }
 .header .container .overlay{
@@ -83,4 +82,10 @@
 .header .right-side-header-container img{
     width: 100%;
     height: 80px;
+}
+
+@media screen and (min-width:1500px) {
+    .header p{font-size: 20px;}
+    .header h1{font-size: 30px;}
+
 }
