change paragraph in header component

--- a/HTML/Components/Header.html
+++ b/HTML/Components/Header.html
@@ -8,7 +8,7 @@
                     <!-- * Header Details  -->
                     <div class="header-details">
                         <h1>Shop Together</h1>
-                        <p>We want your child to feel comfortable, loved and free. Our organic and fairtrade clothing ensures quality of our Clothes</p>
+                        <p>We want you to feel comfortable, loved and free. Our organic and fairtrade clothing ensures quality of our Clothes</p>
                     </div>
 
                     <!-- * View More Items Button  -->
