--- a/CSS/Categories.css
+++ b/CSS/Categories.css
@@ -52,8 +52,8 @@ body{
 .card-img img {
     width: 250px;
     height: 300px;
-    object-fit: cover;
-    border-radius: 10%;
+    object-fit: contain;
+    border-radius: 10px;
     margin-top: 15px;
 }
 
@@ -117,7 +117,7 @@ body{
     color: #FFFFFF;
     top: 10%;
     left: 3%;
-    font-size: 50px;
+    font-size: 45px;
     text-transform: uppercase;
 }
 .word2{
@@ -125,7 +125,7 @@ body{
     color: #FFFFFF;
     top: 20%;
     left: 3%;
-    font-size: 50px;
+    font-size: 45px;
     text-transform: uppercase;
 }
 
