--- a/HTML/Components/Header.html
+++ b/HTML/Components/Header.html
@@ -13,7 +13,7 @@
 
                     <!-- * View More Items Button  -->
                     <div class="view-more-items">
-                        <button class="btn-view-more">View More</button>
+                        <button class="btn-view-more" id="btn-view-more">View More</button>
                     </div>
                 
                     <!-- * Right Side -->
@@ -34,4 +34,6 @@
         </div>
     </div>
 <!--* End Header -->
+
+<script src="../../Scripts/Header.js"></script>
 
