add handler of button view more in header

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,5 +1,7 @@
 /* * In This File will put all shared styles in it */
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     padding: 0;
     margin: 0;
