--- a/HTML/Components/Navbar.html
+++ b/HTML/Components/Navbar.html
@@ -6,7 +6,7 @@
         <ul class="links">
             <li class="active"> <a href="./"> HOME </a></li>
             <li> <a href="./about.html"> ABOUT </a></li>
-            <li> <a href="#"> CONTACT </a></li>
+            <li> <a href="./ContactUs.html"> CONTACT </a></li>
             <li> <a href="#"> STORE </a></li>
             <li> <a href="#"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
             <li id="login">
