--- a/CSS/Categories.css
+++ b/CSS/Categories.css
@@ -12,7 +12,7 @@ body{
     justify-content: space-around;
     align-items: center;
     column-gap: 5%;
-    margin: 0px 150px;
+    margin: 0 150px;
     /*row-gap: 3%;
     margin: 20px 0;
     /*overflow: hidden;*/
@@ -58,8 +58,11 @@ body{
 }
 
 .card-info {
+    /*min-height: 20%;*/
     margin: 5px 30px;
     padding: 5px;
+    min-height: 120px;
+    position: relative;
 }
 
 .card-name {
@@ -76,6 +79,10 @@ body{
     margin: 10px 0;
     font-size: 15px;
     color: #4F5D75;
+    position: absolute;
+    bottom: 10px;
+    left: 40%;
+
 
 }
 
