--- a/HTML/Components/Navbar.html
+++ b/HTML/Components/Navbar.html
@@ -4,11 +4,11 @@
             <h2 id="logo">BOHO...</h2>
         </div>
         <ul class="links">
-            <li class="active"> <a href="./"> HOME </a></li>
-            <li> <a href="./about.html"> ABOUT </a></li>
+            <li class="active"> <a href="Index.html"> HOME </a></li>
+            <li> <a href="GamesMenu.html"> Play & Win </a></li>
+            <li> <a href="about.html"> ABOUT </a></li>
             <li> <a href="#"> CONTACT </a></li>
-            <li> <a href="#"> STORE </a></li>
-            <li> <a href="#"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
+            <li> <a href="Cart.html"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
             <li id="login">
                 <span> Account </span>
                 <img src="../../Images/Header/down.png" class="down-arrow-icon"/>
@@ -17,12 +17,13 @@
     </div>
 </div>
 <div class="account-settings">  
-    <a href="./Login.html"> sign-in </a>
-    <a href="./Login.html#sign-up"> sign-up </a>
+    <a href="Login.html"> sign-in </a>
+    <a href="Login.html#sign-up"> sign-up </a>
 
 </div>
 
 
 <!-- * Check if User login or not -->
+<script src="../Scripts/Cookie.js"></script>
 <script src="../../Scripts/Navbar.js"></script>
 
