--- a/HTML/Components/Navbar.html
+++ b/HTML/Components/Navbar.html
@@ -5,7 +5,7 @@
         </div>
         <ul class="links">
             <li id="index" class="active"> <a href="./"> HOME </a></li>
-            <li id="about"> <a href="./about.html"> ABOUT </a></li>
+            <li id="AboutUs"> <a href="./AboutUs.html"> ABOUT </a></li>
             <li id="ContactUs"> <a href="./ContactUs.html"> CONTACT </a></li>
             <li> <a href="#"> STORE </a></li>
             <li> <a href="#"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
