--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -1,4 +1,3 @@
-*  {margin: 0; padding: 0;}
 body{height: auto;}
 
 .contact-us{
@@ -32,15 +31,14 @@ body{height: auto;}
 	box-shadow: 2px 2px 10px rgb(157, 164, 167);
 	box-shadow: -2px -2px 5px rgb(89, 97, 102);;
     cursor: pointer;
-
 	border-radius: 10px;
 }
 .contact-details h4{
     font-size: 20px;
     text-align: center;
-    padding: 25px 0px ;
-    padding-bottom: 20px;
-    margin-bottom: 30px;
+    margin-top: 0;
+    padding: 20px;
+    margin-bottom: 10px;
 	box-shadow: 2px 2px 10px var(--CadetBlue);
     border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
@@ -53,6 +51,7 @@ body{height: auto;}
     padding-left: 15px;
     font-size: 15px;
     font-weight: 400;
+    margin: 5px;
     margin-bottom: 10px;
     display: inline-block;
 }
