--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -5,7 +5,7 @@ html{
 body{
     padding: 0;
     margin: 0;
-    height: 200vh;
+    height: auto;
 }
 *{
     font-family: 'Open Sans', sans-serif;
