--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -3,16 +3,12 @@
   height: auto!important;
 
 }
+/* <img src="../images/aboutUs.jpg" /> */
 .about-container {
-  border: 1px solid black;
-  /* display: flex; */
-  /* flex-direction: row; */
-}
-.left-side {
-  width: 50%;
-  border: 1px solid black;
-}
-.right-side {
-  width: 40%;
-  border: 1px solid black;
+    background-image: url('../Images/aboutUs.jpg');
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+
 }
