--- a/CSS/Cart.css
+++ b/CSS/Cart.css
@@ -114,6 +114,7 @@ body {
 /*          */
 
   .pay {
+    position: relative;
     display: block;
     margin: auto;
     margin-top: 40px;
@@ -177,6 +178,7 @@ body {
     margin-top: 25px;
     font-weight: bolder;
     font-size: large;
+    position: relative;
   }
 
   .horline {
@@ -281,6 +283,15 @@ body {
   }
 
 
+  .pay-regex-note
+  {
+    position: absolute;
+    left: 35%;
+    color: red;
+    bottom: 2px;
+
+  }
+
 /* responsive styling */
 
 @media (max-width: 950px){
@@ -294,5 +305,12 @@ body {
     .checkout {
       bottom: 100px;
       position: fixed;
+    }
+}
+
+@media (max-width: 820px)
+{
+    .flag {
+      color: green;
     }
 }
