--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -3,12 +3,52 @@
   height: auto!important;
 
 }
-/* <img src="../images/aboutUs.jpg" /> */
 .about-container {
     background-image: url('../Images/aboutUs.jpg');
     width: 100%;
     height: 100vh;
     background-position: center;
     background-size: cover;
-
+    position: relative;
 }
+
+/* * about bg overlay */
+.about-container .overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* * start about-container-details */
+.about-container-details{
+  width: 28%;
+  position: absolute;
+  left: 0;
+  background-color: #B8BDC1;
+  box-shadow: 3px 2px 10px #9fa2a3;
+  height: 100%;
+}
+.about-container-details .heading{
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 15px;
+}
+.about-container-details h1{
+  margin-top: 0;
+}
+
+.text{
+  line-height: 25px;
+  padding: 5px 15px;
+  width: 100%;
+}
+.text p{
+  font-weight: 500;
+}
+text h3{color: var(--Chocolate)}
+
+
+/* * end about-container-details */
