--- a/CSS/2048.css
+++ b/CSS/2048.css
@@ -3,9 +3,12 @@ body {
     font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
-    max-height: 100vh;
     background-image: linear-gradient(to right bottom, #2d3142, #414a58, #59656f, #748085, #939b9d, #94a7a8,
     #97b3ae, #9fbfaf, #9eba90, #b1af6c, #cf9d53, #ef8354);
+    /*overflow: hidden;*/
+    height: 97vh;
+
+
 }
 
 hr {
@@ -17,8 +20,8 @@ h1, h2 {
 }
 
 #board {
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     background-color: #cdcece;
     border-radius: 15px;
     border: 7px solid #2D3142;
