--- a/CSS/Categories.css
+++ b/CSS/Categories.css
@@ -18,7 +18,7 @@ body{
     /*overflow: hidden;*/
 }
 
-/* @media (max-width: 1600px) {
+/* @Media (max-width: 1600px) {
     .main {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
