--- a/HTML/Components/Navbar.html
+++ b/HTML/Components/Navbar.html
@@ -8,7 +8,7 @@
             <li id="AboutUs"> <a href="./AboutUs.html"> ABOUT </a></li>
             <li id="ContactUs"> <a href="./ContactUs.html"> CONTACT </a></li>
             <li id="Games"> <a href="GamesMenu.html"> Play & Win </a></li>
-            <li> <a href="Cart.html"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
+            <li id="Cart"> <a href="Cart.html"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
             <li id="login">
                 <span> Account </span>
                 <img src="../../Images/Header/down.png" class="down-arrow-icon"/>
