--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -3,52 +3,43 @@
   height: auto!important;
 
 }
-.about-container {
-    background-image: url('../Images/aboutUs.jpg');
-    width: 100%;
-    height: 100vh;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
-
-/* * about bg overlay */
-.about-container .overlay{
+.about-container{width: 100%;}
+.about-container .container{
   width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #E9E9E6;
+}
+.about-bg {width: 50%;}
+.about-bg img{
+  width: 500px;
   height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  float: right;
 }
 
 /* * start about-container-details */
 .about-container-details{
-  width: 28%;
-  position: absolute;
-  left: 0;
-  background-color: #B8BDC1;
-  box-shadow: 3px 2px 10px #9fa2a3;
+  width: 50%;
+  background-color: var(--dark-Gray);
   height: 100%;
+  /* text-align: center; */
 }
 .about-container-details .heading{
-  text-align: center;
+  /* text-align: center; */
   padding-top: 50px;
   padding-bottom: 15px;
+  /* float: left; */
+  color: white;
+  text-align: center;
 }
 .about-container-details h1{
   margin-top: 0;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
-.text{
-  line-height: 25px;
-  padding: 5px 15px;
-  width: 100%;
-}
-.text p{
-  font-weight: 500;
-}
-text h3{color: var(--Chocolate)}
 
 
 /* * end about-container-details */
