--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -27,7 +27,6 @@
   /* text-align: center; */
 }
 .about-container-details .heading{
-
   padding-bottom: 15px;
   color: var(--light);
   text-align: center;
@@ -38,11 +37,10 @@
   align-items: center;
   flex-direction: column;
 
-
+}
 .about-container-details h1{
   margin-top: 0;
   text-align: center;
-
   margin-bottom: 40px;
   color: white;
 }
