--- a/HTML/Components/AllCategories.html
+++ b/HTML/Components/AllCategories.html
@@ -15,7 +15,7 @@
             </div>
             <div class="image-details">
                 <h3> 
-                    <a href="./Categories.html?category=women">View all items</a>
+                    <a href="../Categories.html?category=women">View all items</a>
                 </h3>
             </div>
         </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="image-details">
                 <h3> 
-                    <a href="./Categories.html?category=men">View all items</a>
+                    <a href="../Categories.html?category=men">View all items</a>
                 </h3>
             </div>
         </div>
