fixed homepage paths

--- a/HTML/Components/AllCategories.html
+++ b/HTML/Components/AllCategories.html
@@ -11,11 +11,11 @@
         <div class="women-category">
             <div class="image-container">
                 <div class="overlay"></div>
-                <img src="../../Images/Products/Women/women-8.jpg"/>
+                <img src="../Images/Products/Women/women-8.jpg"/>
             </div>
             <div class="image-details">
                 <h3> 
-                    <a href="../Categories.html?category=women">View all items</a>
+                    <a href="Categories.html?category=women">View all items</a>
                 </h3>
             </div>
         </div>
