--- a/HTML/Components/ViewProducts.html
+++ b/HTML/Components/ViewProducts.html
@@ -47,6 +47,6 @@
     </div>
 
 </div>
-<script src="../../Scripts/LoadProducts.js"></script>
+<script src="../Scripts/LoadProducts.js"></script>
 <script src="../Libaray/FadeInProductDetails.js"></script>
 
