--- a/HTML/Components/Navbar.html
+++ b/HTML/Components/Navbar.html
@@ -5,13 +5,13 @@
         </div>
         <ul class="links">
             <li id="index" class="active"> <a href="Index.html"> HOME </a></li>
-            <li id="AboutUs"> <a href="./AboutUs.html"> ABOUT </a></li>
-            <li id="ContactUs"> <a href="./ContactUs.html"> CONTACT </a></li>
+            <li id="AboutUs"> <a href="AboutUs.html"> ABOUT </a></li>
+            <li id="ContactUs"> <a href="ContactUs.html"> CONTACT </a></li>
             <li id="GamesMenu"> <a href="GamesMenu.html"> Play & Win </a></li>
             <li id="Cart"> <a href="Cart.html"> SHOPPING BAG <span class="fa-sharp fa-solid fa-bag-shopping" style="margin-left: 5px;"> </span> </a></li>
             <li id="login">
                 <span> Account </span>
-                <img src="../../Images/Header/down.png" class="down-arrow-icon"/>
+                <img src="../Images/Header/down.png" class="down-arrow-icon"/>
             </li>
         </ul>
     </div>
@@ -25,5 +25,5 @@
 
 <!-- * Check if User login or not -->
 <script src="../Scripts/Cookie.js"></script>
-<script src="../../Scripts/Navbar.js"></script>
+<script src="../Scripts/Navbar.js"></script>
 
