--- a/HTML/Components/Header.html
+++ b/HTML/Components/Header.html
@@ -35,5 +35,5 @@
     </div>
 <!--* End Header -->
 
-<script src="../../Scripts/Header.js"></script>
+<script src="../Scripts/Header.js"></script>
 
